5/packages/angular_test/src/errors/generic_type_missing.template.ddc.js
define(['dart_sdk'], function(dart_sdk) {
  'use strict';
  const core = dart_sdk.core;
  const dart = dart_sdk.dart;
  const dartx = dart_sdk.dartx;
  const _root = Object.create(null);
  const src__errors__generic_type_missing$46template = Object.create(_root);
  let VoidTovoid = () => (VoidTovoid = dart.constFn(dart.fnType(dart.void, [])))();
  src__errors__generic_type_missing$46template.initReflector = function() {
  };
  dart.fn(src__errors__generic_type_missing$46template.initReflector, VoidTovoid());
  dart.trackLibraries("packages/angular_test/src/errors/generic_type_missing.template.ddc", {
    "package:angular_test/src/errors/generic_type_missing.template.dart": src__errors__generic_type_missing$46template
  }, '{"version":3,"sourceRoot":"","sources":["generic_type_missing.template.dart"],"names":[],"mappings":";;;;;;;;;EASsB","file":"generic_type_missing.template.ddc.js"}');
  // Exports:
  return {
    src__errors__generic_type_missing$46template: src__errors__generic_type_missing$46template
  };
});

//# sourceMappingURL=generic_type_missing.template.ddc.js.map
